# spinice

./: .gitignore  CMakeLists.txt  README.md  dipassign.cpp  easyflip.cpp  evolve.cpp  evolvesave.cpp  flipsingle.cpp  getacorr.cpp  getenergy.cpp  jobsp.sh  kmc.py  main.cpp  mcstep.cpp  notes.txt  oldnotes.txt  spinice.h  submit.sh  valprod
anneal/: CMakeCache.txt  Makefile  a  cmake_install.cmake
cellsize8/: evolve.cpp  evolvesave.cpp  flipsingle.cpp  getenergy.cpp  jobsp.sh  main.cpp  mcstep.cpp  oldmain.cpp  spinice.h  submit.sh
cellsize8/prod/: CMakeCache.txt  Makefile  a  cmake_install.cmake
prod/: CMakeCache.txt  Makefile  a  cmake_install.cmake
unused/: calcacorr.cpp  dipassign.cpp  getacorr.cpp  getenergy.cpp
